--- a/src/assets/css/animText.scss
+++ b/src/assets/css/animText.scss
@@ -114,8 +114,8 @@ body {
     background-repeat: repeat-y;
     background-position: center center;
     background-size: cover, 100% 3px;
-    font-size: calc(10px + 2vw);
-    font-family: 'VT323', monospace, sans-serif;
+    font-size: 29px;
+    font-family: 'Press Start 2P', cursive;
     color: #3f3; // hacker green
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
