--- a/src/assets/css/animText.scss
+++ b/src/assets/css/animText.scss
@@ -6,10 +6,10 @@ $strings: (
 );
 
 // now for some timing (in seconds)
-$durCharFwd: 0.05; // character typed
-$durFullGap: 2.00; // time between typed/delete
+$durCharFwd: 0.03; // character typed
+$durFullGap: 1.00; // time between typed/delete
 $durCharBwd: 0.03; // character deleted
-$durDoneGap: 1.00; // time between strings
+$durDoneGap: 0.5; // time between strings
 
 // initializing some variables and functions ✊🏼
 $charCount: 0;
@@ -107,11 +107,13 @@ body {
 
 .typewriter {
 
+
     background-repeat: repeat-y;
     background-position: center center;
     background-size: cover, 100% 3px;
     font-size: 29px;
     font-family: 'Press Start 2P', cursive;
+    text-shadow: 0 0 5px rgba(51, 255, 51, 0.75);
     color: #3f3; // hacker green
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -138,6 +140,11 @@ body {
 
     &::before {
         // just generating some useful stats here 👋🏼
+
+
+        @media (max-width: 575px) {
+            content: "#{length($strings)} strings \A #{$charCount} chars \A #{$durTotal}s duration";
+        }
 
         display: block;
         position: absolute;
